external-crates/move/crates/move-compiler/tests/move_2024/parser/dot_incomplete.exp
error[E03010]: unbound field
   ┌─ tests/move_2024/parser/dot_incomplete.move:12:21
   │
12 │         let _tmp1 = s.;                // incomplete with `;` (next line should parse)
   │                     ^^ Unbound field '' in 'a::m::AnotherStruct'

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/dot_incomplete.move:12:23
   │
12 │         let _tmp1 = s.;                // incomplete with `;` (next line should parse)
   │                       ^
   │                       │
   │                       Unexpected ';'
   │                       Expected an identifier

error[E03010]: unbound field
   ┌─ tests/move_2024/parser/dot_incomplete.move:13:21
   │
13 │         let _tmp2 = s.another_field.;  // incomplete with `;` (next line should parse)
   │                     ^^^^^^^^^^^^^^^^ Unbound field '' in 'a::m::SomeStruct'

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/dot_incomplete.move:13:37
   │
13 │         let _tmp2 = s.another_field.;  // incomplete with `;` (next line should parse)
   │                                     ^
   │                                     │
   │                                     Unexpected ';'
   │                                     Expected an identifier

error[E03010]: unbound field
   ┌─ tests/move_2024/parser/dot_incomplete.move:14:21
   │
14 │         let _tmp3 = s.another_field.   // incomplete without `;` (unexpected `let`)
   │                     ^^^^^^^^^^^^^^^^ Unbound field '' in 'a::m::SomeStruct'

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/dot_incomplete.move:15:9
   │
15 │         let _tmp4 = s;
   │         ^^^
   │         │
   │         Unexpected 'let'
   │         Expected an identifier

